--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: WhatATheme
 title: Web Apps Conception
 description: Site web officiel du projet Web Apps Conception
