--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: WhatATheme
+theme: jekyll-theme-time-machine
 title: Web Apps Conception
 description: Site web officiel du projet Web Apps Conception
