Test du thème Jekyll leap-day.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-leap-day
 title: Web Apps Conception
 description: Site web officiel du projet Web Apps Conception
