Ajout du plugin jekyll-target-blank.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-leap-day
 title: Web Apps Conception
 description: Site web officiel du projet Web Apps Conception
+plugins:
+  - jekyll-target-blank
