--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,4 +6,8 @@ plugins:
 
 target-blank:
     css_class: ext-link
+    add_css_classes: css-class-one css-class-two
+    noopener: false
+    noreferrer: false
+    rel: nofollow
 
