Plugin jekyll-target-blank : correctif de la config des liens externes.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,5 +9,5 @@ target-blank:
     add_css_classes: css-class-one css-class-two
     noopener: false
     noreferrer: false
-    rel: nofollow
+    nofollow: false
 
