Mise à jour docs/_config.yml.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,10 @@
 theme: jekyll-theme-leap-day
 title: Web Apps Conception
+name: Rudy TUANI
 description: Site web officiel du projet Web Apps Conception
-
+url: https://webapps-conception.github.io
+repository: webapps-conception/webapps-conception.github.io
+show_downloads: false
+#google_analytics: Your Google Analytics tracking ID
+plugins:
+  - jekyll-sitemap
