--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,6 +5,6 @@ description: Site web officiel du projet Web Apps Conception
 url: https://webapps-conception.github.io
 repository: webapps-conception/webapps-conception.github.io
 show_downloads: false
-#google_analytics: Your Google Analytics tracking ID
+google_analytics: G-JYQX8B02PN
 plugins:
   - jekyll-sitemap
