Remplacement du thème jekyll-theme-leap-day par jekyll-theme-minimal.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-minimal
 title: Web Apps Conception
 name: Rudy TUANI
 description: Site web officiel du projet Web Apps Conception
