Test jekyll-theme-minimal sous https://github.com/webapps-conception/jekyll-theme-minimal.git.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: https://github.com/webapps-conception/jekyll-theme-minimal.git
 title: Web Apps Conception
 name: Rudy TUANI
 description: Site web officiel du projet Web Apps Conception
