--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: https://github.com/webapps-conception/jekyll-theme-minimal.git
+theme: jekyll-theme-minimal
 title: Web Apps Conception
 name: Rudy TUANI
 description: Site web officiel du projet Web Apps Conception
