Mise à jour des titres de la page docs/README.md

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-leap-day
 title: Web Apps Conception
 name: Rudy TUANI
-description: Site web officiel du projet Web Apps Conception
+description: Blog officiel du projet Web Apps Conception
 url: https://webapps-conception.github.io
 repository: webapps-conception/webapps-conception.github.io
 show_downloads: false
