Mise à jour des titres de la page docs/README.md

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-leap-day
-title: Web Apps Conception
+title: Blog Web Apps Conception
 name: Rudy TUANI
 description: Blog officiel du projet Web Apps Conception
 url: https://webapps-conception.github.io
